# django-admob-ssv

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml  tests.yml
admob_ssv/: __init__.py  apps.py  conf.py  signals.py  utils.py  views.py
admob_ssv/conf/: settings.py
django_admob_ssv/: __init__.py  apps.py  signals.py  utils.py  views.py
django_admob_ssv/conf/: settings.py
example_project/example_project/: settings.py  urls.py  wsgi.py
example_project/rewards/: __init__.py  apps.py  models.py  signals.py
example_project/rewards/migrations/: 0001_initial.py
tests/: test_conf.py  test_views.py
tests/project/: manage.py
tests/project/project/: settings.py  urls.py
tests/project/rewards/: admin.py  apps.py  models.py
tests/project/rewards/migrations/: 0001_initial.py
tests/project/verifications/: admin.py  apps.py  models.py  signals.py
tests/project/verifications/migrations/: 0001_initial.py  0002_make_optional_fields_nullable.py
