[tool.poetry]
name = "django-admob-ssv"
version = "3.0.1"
description = "Admob server-side verification for Django projects"
authors = ["Jonathan Ehwald <github@ehwald.info>"]
license = "MIT"
readme = "README.md"
packages = [{include = "admob_ssv"}]
homepage = "https://github.com/DoctorJohn/django-admob-ssv"
repository = "https://github.com/DoctorJohn/django-admob-ssv"
documentation = "https://github.com/DoctorJohn/django-admob-ssv"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.10"
django = ">4.2"
ecdsa = "^0.19.0"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pre-commit = "^3.3.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-django = "^4.5.2"
pytest-randomly = "^3.15.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.project.project.settings"
